--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'org.greenrobot.greendao'
 
 android {
     compileSdkVersion 26
@@ -17,6 +18,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    greendao{
+        schemaVersion 1
+        daoPackage 'com.now.working.data.db'
+        targetGenDir 'src/main/java'
+    }
 }
 
 dependencies {
@@ -29,4 +36,5 @@ dependencies {
     compile 'com.android.support:design:26.0.0-alpha1'
     compile 'com.github.bumptech.glide:glide:3.5.2'
     compile 'com.github.xiaoyanger0825:NiceVieoPlayer:v2.2'
+    compile 'org.greenrobot:greendao:3.1.0'
 }
