--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -1,16 +1,17 @@
-apply plugin: 'com.android.application'
-apply plugin: 'org.greenrobot.greendao'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 26
     buildToolsVersion "26.0.2"
+
     defaultConfig {
-        applicationId "com.now.working"
         minSdkVersion 19
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
+
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
     buildTypes {
         release {
@@ -18,17 +19,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
-    greendao{
-        schemaVersion 1
-        daoPackage 'com.now.working.data.db'
-        targetGenDir 'src/main/java'
-    }
-
-    lintOptions {
-        abortOnError false
-    }
-
 }
 
 dependencies {
@@ -38,15 +28,4 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:design:26.0.0-alpha1'
-    compile 'com.github.bumptech.glide:glide:3.5.2'
-    compile 'com.github.xiaoyanger0825:NiceVieoPlayer:v2.2'
-    compile 'org.greenrobot:greendao:3.1.0'
-    compile 'io.reactivex.rxjava2:rxjava:2.1.7'
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
-
-    compile project(path: ':plugin')
-
 }
