--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.now.working">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
 
     <application
+        tools:replace="label"
         android:name=".WorkApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
