--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@
 
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-isBuildModule = true
+isBuildModule = false
 
 org.gradle.jvmargs=-Xmx1536m
 
