--- a/libhttp/src/main/release/AndroidManifest.xml
+++ b/libhttp/src/main/release/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.cyj.libhttp">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -7,8 +8,22 @@
 
     <application
         android:allowBackup="true"
+        tools:replace="label"
         android:label="@string/net_app_name"
         android:supportsRtl="true">
+
+        <activity android:name=".Test">
+            <intent-filter>
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <action android:name="android.intent.action.VIEW" />
+                <data
+                    android:scheme="lib"
+                    android:host="com.cyj.http"
+                    android:path="/activity/test"/>
+            </intent-filter>
+        </activity>
 
     </application>
 
