--- a/libhttp/src/main/release/AndroidManifest.xml
+++ b/libhttp/src/main/release/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:label="@string/net_app_name"
         android:supportsRtl="true">
 
-        <activity android:name=".Test">
+        <activity android:name=".TestActivity">
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
