--- a/plugin/src/main/AndroidManifest.xml
+++ b/plugin/src/main/AndroidManifest.xml
@@ -1,8 +1,11 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.now.plugin">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.now.plugin">
 
-    <application android:allowBackup="true" android:label="@string/app_name"
+    <application
+        android:allowBackup="true"
+        android:label="@string/app_name"
         android:supportsRtl="true">
-
+        <activity android:name=".activity.PluginActivity" />
     </application>
 
 </manifest>
