添加自定义gradle插件

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':plugin', ':libhttp', ':annotation', ':router', ':compiler', ':libservice'
+include ':app', ':plugin', ':libhttp', ':annotation', ':router', ':compiler', ':libservice', ':workplugin'
