--- a/build.gradle
+++ b/build.gradle
@@ -7,10 +7,15 @@ buildscript {
             url 'https://maven.google.com/'
             name 'Google'
         }
+
+        maven {
+            url uri("/Users/chengyijun/GitHub/Working/workplugin/repo")
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0'
         classpath 'org.greenrobot:greendao-gradle-plugin:3.1.0'
+        classpath 'com.work.plugin.workplugin:WorkPlugin:1.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
