--- a/libhttp/build.gradle
+++ b/libhttp/build.gradle
@@ -6,7 +6,7 @@ if (isBuildModule.toBoolean()) {
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.2"
+    buildToolsVersion '27.0.3'
 
 
     defaultConfig {
