--- a/workplugin/build.gradle
+++ b/workplugin/build.gradle
@@ -2,6 +2,10 @@ apply plugin: 'groovy'
 apply plugin: 'maven'
 
 dependencies {
+    compile group: 'org.javassist', name: 'javassist', version: '3.20.0-GA'
+    compile 'com.android.tools.build:gradle:3.1.3'
+    compile 'commons-io:commons-io:2.5'
+
     compile gradleApi()
     compile localGroovy()
 }
